[gd_scene load_steps=5 format=3 uid="uid://cr8cjatjiolay"]

[ext_resource type="Script" path="res://enemy.gd" id="1_plyv1"]
[ext_resource type="Texture2D" uid="uid://clmtlhtqb0u7m" path="res://mushroom.png" id="2_ppyat"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bttqu"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8yl8"]
size = Vector2(14, 8)

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_plyv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_bttqu")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("2_ppyat")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_p8yl8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
