[gd_scene load_steps=7 format=3 uid="uid://cr8cjatjiolay"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_plyv1"]
[ext_resource type="Texture2D" uid="uid://clmtlhtqb0u7m" path="res://assets/mushroom.png" id="2_ppyat"]
[ext_resource type="Script" path="res://scripts/HurtBox.gd" id="3_hpu1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bttqu"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8yl8"]
size = Vector2(14, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_102g7"]
radius = 162.373

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_plyv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_bttqu")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("2_ppyat")

[node name="HurtDetector" type="Area2D" parent="."]
position = Vector2(0, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtDetector"]
shape = SubResource("RectangleShape2D_p8yl8")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, 6)
script = ExtResource("3_hpu1v")
damage = 1
entity = "Enemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_p8yl8")

[node name="VisionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRadius"]
shape = SubResource("CircleShape2D_102g7")

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HurtDetector" to="." method="_on_hurt_detector_area_entered"]
[connection signal="body_entered" from="VisionRadius" to="." method="_on_vision_radius_body_entered"]
[connection signal="body_exited" from="VisionRadius" to="." method="_on_vision_radius_body_exited"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
